[package]
name = "HueMonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
reqwest = { version = "0.12.13", features = ["blocking", "json"] }
serde_json = "1.0.140"
telegraf = "0.6.0"
